47
================

11/08/23 Add log support to people in new mobile interface #950
11/08/23 Use same scheme with 2m cache for splash/logo.jpg
11/08/23 Fix bug where saving an appointment reset the amount to $0
10/08/23 Do not show checkout under Move->Adopt for animals with no fee
10/08/23 Allow RescueGroups to be published to more frequently than 24 hours
09/08/23 Add {{CC}} and {{BCC}} email tokens #1088
09/08/23 {{SUBJECT}} and {{FROM}} email tokens in template support #1088
09/08/23 Option to enable thumbnails in clinic screens #1259
09/08/23 Advanced find animal: Seach on diet #1313
09/08/23 Advanced find animal: Search on jurisdiction #1267
09/08/23 Allow paperwork generation to be disabled #1316
07/08/23 Allow additional fields to be hidden #598
07/08/23 Low stock level alerts #954
06/08/23 Merge person on email/cell checks first name field to avoid false positives
05/08/23 Hide the CSV import delete database option for large databases
05/08/23 Fix bug where reserves with move date but no animal could NPE during validation
04/08/23 Audit when document templates are edited, include name on audits
04/08/23 Default stock unit price during give of vacc/test #441
04/08/23 CSV import option to override animal entry date to today
03/08/23 New Move->Adopt option to generate and request signed paperwork #1231
03/08/23 Adoption contracts via checkout should use new link to animal/person
02/08/23 Fix error generating animal docs with a broken preferred image
02/08/23 Add warning of app retirement to smartphone UI as well #1096
02/08/23 Implement incident and log functions in new mobile interface #1096
02/08/23 Limit datepicker to today when giving tests/vaccinations
01/08/23 Remove people with only a cancelled reserve after X years #1239
01/08/23 Show an icon to indicate a form is for an existing person #1308
01/08/23 Fix client side validation of boarding dates/times
31/07/23 Remove animal media X years after animal leaves/dies #1254